fixed post container position on mobile

--- a/src/components/PostContainer/_PostContainer.scss
+++ b/src/components/PostContainer/_PostContainer.scss
@@ -99,7 +99,7 @@
   @media (max-width: 640px) {
     margin-bottom: 112px;
     border: none;
-    margin-top: -112px;
+    margin-top: 2px;
     width: 100%;
   }
 
